# bus

./: .gitignore  Dockerfile  README.md  bun.lockb  conftest.py  package.json  pyproject.toml
schemas/: personinfo.yaml
scripts/: gen_types.py  setup.py
tests/: test_collections.py  test_rest.py  test_snippets.py  test_storage.py
ui/: app.ts  async.ts  build.ts  index.ts  light.css  pollyfills.js  shoelace.dark.css  style.css
ui/apps/: page.ts  router.ts  schema-editor.ts
ui/bus/: objects.ts
ui/components/: activity-auth.ts  activity-card.ts  activity-create.ts  activity-sub.ts  app-layout.ts
ui/schema/: schema-data.ts  schema-field.ts  schema-set.ts
ui/scrap/: item-subscription.html  itemprop-activity-sub.ts
ui/snippets/: elements.ts
valet/: __init__.py  app.py  auth.py  logging.py  models.py  resources.py  schemas.py  settings.py  templates.py
valet/bus/: __init__.py  base.py  objects.py  worker.py
valet/bus/storage/: elastic.py
valet/templates/: collection-index.html  collection.html  index.html  schema.html  scrap-list.html
valet/templates/parts/: class.html
