[project]
name = "valet"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Brantley Harris", email = "deadwisdom@gmail.com" }
]
dependencies = [
    "fastapi>=0.111.0",
    "jinja2>=3.1.4",
    "black>=24.4.2",
    "orjson>=3.10.3",
    "elasticsearch>=8.14.0",
    "pytest-asyncio>=0.23.7",
    "aiohttp>=3.9.5",
    "pydantic-settings>=2.3.1",
    "yarl>=1.9.4",
    "nanoid>=2.0.0",
    "passlib>=1.7.4",
    "authlib>=1.3.1",
    "itsdangerous>=2.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
virtual = true

[project.scripts]
setup-elastic = 'valet.storage.elastic:setup'

[tool.rye.scripts]
dev = "fastapi dev valet/app.py"
watch = "bun build --watch ./ui/async.ts ./ui/index.ts --outdir ./build/ui --sourcemap=inline --loader .css:file --asset-naming \"[name].[ext]\" --publicPath=/ui/ --splitting --minify"
test = "pytest"
setup = "python scripts/setup.py ."

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["valet"]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*Pydantic serializer.*:UserWarning"
]
