[project]
name = "valet"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Brantley Harris", email = "deadwisdom@gmail.com" }
]
dependencies = [
    "fastapi>=0.111.0",
    "jinja2>=3.1.4",
    "black>=24.4.2",
    "orjson>=3.10.3",
    "elasticsearch>=8.14.0",
    "pytest-asyncio>=0.23.7",
    "aiohttp>=3.9.5",
    "pydantic-settings>=2.3.1",
    "yarl>=1.9.4",
    "nanoid>=2.0.0",
    "passlib>=1.7.4",
    "authlib>=1.3.1",
    "itsdangerous>=2.2.0",
    "linkml>=1.8.1",
    "linkml-runtime>=1.8.0",
    "inflection>=0.5.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
virtual = true

[project.scripts]
setup-elastic = 'valet.storage.elastic:setup'

[tool.rye.scripts]
dev = "fastapi dev valet/app.py"
ui = "bun ./ui/build.ts --watch"
test = "pytest"
setup = "python scripts/setup.py ."
gen-types = "python scripts/gen_types.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["valet"]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*Pydantic serializer.*:UserWarning"
]
